# sha2-derive

./: Cargo.toml  LICENSE
lib/: Cargo.toml  README.md
lib/src/: implementations.rs  lib.rs
lib/tests/: test.rs
proc-macro/: Cargo.toml  README-cratesio.md
proc-macro/src/: hashable.rs  lib.rs  parser.rs
