[package]
name = "sha2-derive-proc-macro"
authors = ["Mubelotix <mubelotix@gmail.com>"]
readme = "README-cratesio.md"
description = "The proc macro used by the sha2-derive crate."
repository = "https://github.com/Mubelotix/sha2-derive"
license = "MIT"
version = "0.1.2"
edition = "2021"

[lib]
proc-macro = true
